# finalcall

./: README.md  package.json  snapcraft.yaml
.github/workflows/: windows-bundles.yml
.tools/: linuxdeploy-plugin-gtk  linuxdeploy-x86_64.AppImage
packaging/arch/: PKGBUILD  finalcall.desktop
packaging/flatpak/: com.krish.finalcall.yaml
scripts/: build-arch.sh  build-flatpak.sh  build-snap.sh  build-windows-exe.sh  build-windows-msi.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
